--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = Plugins/UnrealSharp
 	url = https://github.com/UnrealSharp/UnrealSharp.git
 	branch = main
+[submodule "Script/ManagedLunyScratch_Examples/LunyScratch_Unreal"]
+	path = Script/ManagedLunyScratch_Examples/LunyScratch_Unreal
+	url = https://github.com/CodeSmile-0000011110110111/LunyScratch_Unreal.git
