--- a/Script/ManagedLunyScratch_Examples/ManagedLunyScratch_Examples.csproj
+++ b/Script/ManagedLunyScratch_Examples/ManagedLunyScratch_Examples.csproj
@@ -6,6 +6,7 @@
     <CopyLocalLockFileAssembliesName>true</CopyLocalLockFileAssembliesName>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <EnableDynamicLoading>true</EnableDynamicLoading>
+    <LangVersion>10</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="LanguageExt.Core" Version="4.4.9" />
