--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,4 @@
 	path = Script/ManagedLunyScratch_Examples/LunyScratch_Unreal
 	url = https://github.com/CodeSmile-0000011110110111/LunyScratch_Unreal.git
 	branch = main
+    update = merge
