--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "Plugins/UnrealSharp"]
 	path = Plugins/UnrealSharp
 	url = https://github.com/CodeSmile-0000011110110111/UnrealSharp.git
-	branch = main
+	branch = LunyScratch
 [submodule "Script/ManagedLunyScratch_Examples/LunyScratch_Unreal"]
 	path = Script/ManagedLunyScratch_Examples/LunyScratch_Unreal
 	url = https://github.com/CodeSmile-0000011110110111/LunyScratch_Unreal.git
