--- a/Script/ManagedLunyScratch_Examples/ManagedLunyScratch_Examples.csproj
+++ b/Script/ManagedLunyScratch_Examples/ManagedLunyScratch_Examples.csproj
@@ -23,4 +23,8 @@
     <None Update="**/.gitignore" Visible="false" />
     <None Update="**/.gitmodules" Visible="false" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="LunyScratch_Unreal\Runtime\Unreal\Objects\" />
+    <Folder Include="LunyScratch_Unreal\Runtime\Unreal\UI\" />
+  </ItemGroup>
 </Project>
