--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -29,12 +29,13 @@ r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.RayTracing.Shadows=False
 r.MegaLights.EnableForProject=False
 r.Nanite.ProjectEnabled=True
-r.AntiAliasingMethod=2
+r.AntiAliasingMethod=4
 r.ForwardShading=False
 r.DefaultFeature.MotionBlur=True
 r.DefaultFeature.LensFlare=True
 r.ScreenPercentage.Default=10.000000
 r.ScreenPercentage.Default.Desktop.Mode=0
+r.MSAACount=8
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
